UHF-8227: Fixed the alignments in the phasing component.

--- a/src/scss/06_components/paragraphs/_phasing.scss
+++ b/src/scss/06_components/paragraphs/_phasing.scss
@@ -16,7 +16,7 @@ $-circle-size--ol-l: $spacing-triple;
   }
 
   .component__content {
-    padding-left: 0;
+    padding-inline-start: 0;
   }
 }
 
@@ -25,7 +25,8 @@ $-circle-size--ol-l: $spacing-triple;
   --p-left: #{$-item-padding-left};
   background-color: var(--hdbt-color-palette--secondary);
   list-style: none;
-  padding: $-item-padding $-item-padding $-item-padding var(--p-left);
+  padding-block: $-item-padding;
+  padding-inline: var(--p-left) $-item-padding;
   position: relative;
 
   &:not(:last-of-type) {
@@ -36,7 +37,7 @@ $-circle-size--ol-l: $spacing-triple;
   &::after {
     content: '';
     display: block;
-    left: calc(var(--p-left) * 0.5);
+    inset-inline-start: calc(var(--p-left) * 0.5);
     position: absolute;
   }
 
